--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -9,6 +9,6 @@
 <h3 th:text="${status} + ' - ' + ${error}"></h3>
 <p th:text="${message}"></p>
 
-<a th:href="@{/}" class="btn btn-primary mt-3">Volver al inicio</a>
+<a th:href="@{/juegos}" class="btn btn-primary mt-3">Volver al inicio</a>
 </body>
 </html>
