--- a/src/main/resources/templates/juegos/addJuego.html
+++ b/src/main/resources/templates/juegos/addJuego.html
@@ -51,9 +51,9 @@
 <body>
 <div class="sidebar">
     <h4>Menú</h4>
-    <a th:href="@{/}">Inicio</a>
-    <a th:href="@{/juegos}">Lista de Juegos</a>
-    <a th:href="@{/juegos/add}">Añadir Juego</a>
+    <a class="nav-link text-white" th:href="@{/juegos}">Lista de Juegos</a>
+    <a class="nav-link text-white" th:href="@{/juegos/completados}">Juegos Completados</a>
+    <a class="nav-link text-white" th:href="@{/juegos/estadisticas}">Estadísticas</a>
 </div>
 <div class="content">
     <div class="card shadow">
