--- a/src/main/resources/templates/juegos/updateJuego.html
+++ b/src/main/resources/templates/juegos/updateJuego.html
@@ -51,16 +51,15 @@
 <body>
 <div class="sidebar">
     <h4>Menú</h4>
-    <a th:href="@{/}">Inicio</a>
-    <a th:href="@{/juegos}">Lista de Juegos</a>
-    <a th:href="@{/juegos/add}">Añadir Juego</a>
-    <a th:href="@{/juegos/update/{id}(id=${juego.id})}">Editar Juego</a>
+    <a class="nav-link text-white" th:href="@{/juegos}">Lista de Juegos</a>
+    <a class="nav-link text-white" th:href="@{/juegos/completados}">Juegos Completados</a>
+    <a class="nav-link text-white" th:href="@{/juegos/estadisticas}">Estadísticas</a>
 </div>
 
 <div class="content">
     <div class="card shadow">
         <h2 class="text-center mb-4" th:text="${juego.id == null ? 'Añadir Nuevo Juego' : 'Editar Juego'}"></h2>
-        <form th:action="@{${juego.id == null ? '/juegos/add' : '/juegos/update/{id}(id=${juego.id})'}}" th:object="${juego}" method="post">
+        <form th:action="@{/juegos/update/{id}(id=${juego.id})}" th:object="${juego}" method="post">
             <input type="hidden" th:if="${juego.id != null}" th:field="*{id}">
 
             <div class="row">
