--- a/src/main/resources/templates/juegos/completados.html
+++ b/src/main/resources/templates/juegos/completados.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <title>Lista de Juegos</title>
+  <title>Juegos completados</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.datatables.net/1.13.1/css/jquery.dataTables.min.css" rel="stylesheet">
   <style>
@@ -44,12 +44,13 @@
 
 <div class="sidebar">
   <h4 class="text-center">Menú</h4>
-  <a class="nav-link text-white" th:href="@{/usuario/perfil}">Mi Perfil</a>
   <a class="nav-link text-white" th:href="@{/juegos}">Lista de Juegos</a>
+  <a class="nav-link text-white" th:href="@{/juegos/completados}">Juegos Completados</a>
+  <a class="nav-link text-white" th:href="@{/juegos/estadisticas}">Estadísticas</a>
 </div>
 
 <div class="content">
-  <h1 class="text-center">Lista de Juegos</h1>
+  <h1 class="text-center">Juegos completados</h1>
   <div class="card p-3">
     <table id="juegosTable" class="table table-striped table-bordered">
       <thead class="table-dark">
